--- a/src/components/menu/tabMenu.scss
+++ b/src/components/menu/tabMenu.scss
@@ -15,8 +15,11 @@
   bottom: 0px;
   align-items: center;
   justify-content: center;
-  border-radius: 50px;
-  background: $color-text-secondary;
+  background: rgba(255, 255, 255, 0.45);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(2.5px);
+  -webkit-backdrop-filter: blur(2.5px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
   z-index: 9999;
 
   &__item {
@@ -24,6 +27,8 @@
     flex-grow: 1;
     z-index: 100;
     display: flex;
+    flex-direction: column;
+    gap: 5px;
     cursor: pointer;
     position: relative;
     border-radius: 50%;
@@ -64,6 +69,11 @@
         color: #070709;
       } */
     }
+
+    span {
+      font-size: .8rem;
+    }
+
   }
 }
 
