--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -17,27 +17,28 @@
 
   .container {
     width: 400px;
-    height: 500px;
+    height: 450px;
     overflow: hidden;
     position: relative;
+    cursor: pointer;
     border-radius: 5px;
     box-shadow: 0 0 20px #000;
     -webkit-box-reflect: below -1px -webkit-gradient(linear, left top, left bottom, from(transparent),
         color-stop(80%, transparent), to(rgba(250, 250, 250, 0.5)));
 
-        @include mobile {
-          width: 300px;
-        }
+    @include mobile {
+      width: 300px;
+    }
 
     img {
       height: 100%;
-      transform: scale(1.2);
-      filter: grayscale(100%);
+      width: 100%;
+      display: block;
       transition: .7s ease-in-out;
 
       &:hover {
-        filter: grayscale(0);
-        transform: scale(1);
+        filter: grayscale(100%);
+        transform: scale(1.2);
 
         ~.text {
           transform: rotateX(0deg);
@@ -46,19 +47,17 @@
         ~ul li {
           color: #000;
           transform: rotatey(0deg);
-        
+
           li:first-of-type {
             transition-delay: .5s;
           }
-  
+
           li:nth-of-type(2) {
             transition-delay: .7s;
-          }}
+          }
+        }
       }
 
-      @include sm {
-        height: 150%;
-      }
 
     }
 
@@ -80,7 +79,7 @@
       text-align: center;
       position: absolute;
       top: 0;
-    
+
       li {
         background-color: #FFF;
         width: 45px;
@@ -91,27 +90,27 @@
         transform-origin: left;
         cursor: pointer;
         transition: .5s ease-in-out;
-    
+
         &:hover {
           color: #000;
           transform: rotatey(0deg);
         }
-    
+
         &:first-of-type {
           transition-delay: .5s;
         }
-    
+
         &:nth-of-type(2) {
           transition-delay: .7s;
         }
-    
+
         svg {
           width: 20px;
           height: 20px;
         }
       }
     }
-    
+
 
     .skewd {
       background-color: rgb(255, 255, 255);
